k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pomidor-app
spec:
  selector:
    app: pomidor-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
