k8s/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: pomidor-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
      paths:
        - path: /*
          pathType: Prefix
          backend:
            service:
              name: pomidor-app
              port:
                number: 80
